lab/ingress-nginx/aks/httpbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1

  selector:
    matchLabels:
      app: httpbin

  template:
    metadata:
      labels:
        app: httpbin

    spec:
      containers:
        - name: httpbin
          image: docker.io/kennethreitz/httpbin:latest

          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  type: ClusterIP

  selector:
    app: httpbin

  ports:
    - name: http
      port: 8000
      targetPort: http
